[tool.poetry]
name = "onlyfans-dl"
version = "0.1.0"
description = ""
authors = ["da rougarou"]

[tool.poetry.dependencies]
python = "^3.10"
requests = {extras = ["socks"], version = "^2.28.0"}
msgspec = "^0.7.0"
platformdirs = "^2.5.2"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
types-requests = "^2.27.29"

[tool.mypy]
ignore_missing_imports = true
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
