[tool.poetry]
name = "onlyfans-dl"
version = "0.1.0"
description = ""
authors = ["rdnkarchiver <rdnkarchiver@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = {extras = ["socks"], version = "^2.28.1"}
msgspec = "^0.7.1"
platformdirs = "^2.5.2"

[tool.poetry.dev-dependencies]
mypy = "^0.961"
types-requests = "^2.28.0"

[tool.mypy]
ignore_missing_imports = true
strict = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
